--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+	<link rel="icon" href="./favicon.ico?" type="image/x-icon"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>Mindset Student</title>
+	<title>Mindset Student | Gestão Escolar</title>
 	<link href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900" rel="stylesheet" />
 </head>
